First part of slides, pausing work

--- a/slides/index.html
+++ b/slides/index.html
@@ -44,6 +44,284 @@
 					</p>
 				</section>
 
+				<section>
+					<section>
+						<h2>Historique du média Mobile</h2>
+					</section>
+					<section>
+						<h3>Les précurseurs</h3>
+
+						<p>Pager <br /><small>(1960, surtout utilisés dans les années 80)</small></p>
+						<p>PDA <br /><small>(Psion Organiser, 1986)</small></p>
+					</section>
+					<section>
+						<h3>Les débuts</h3>
+
+						<p>Premier <em>smartphone</em> <br /><small>(IBM Simon, 1992, commercialisé en 1994)</small></p>
+						<p>GSM "grand public" <em>vs.</em> "pro"</p>
+					</section>
+					<section>
+						<h3>2007, la révolution <em>touch</em></h3>
+
+						<p><a href="https://www.youtube.com/watch?v=9hUIxyE2Ns8">Présentation de l'iPhone</a> (2007)</p>
+						<p>Suivi par Android, Blackberry Touch &amp; Windows Mobile.</p>
+					</section>
+					<section>
+						<h3>En parallèle, l'évolution des débits</h3>
+						<ul>
+							<li><strong>GSM/2G (1990):</strong> <code>±9 kbit/s</code></li>
+							<li><strong>EDGE (~2000):</strong> <code>±170 kbit/s</code></li>
+							<li><strong>3G UMTS (~2006):</strong> <code>±1.9 Mbit/s</code></li>
+							<li><strong>3.5G HSPA (~2006):</strong> <code>±14.4 Mbit/s</code></li>
+							<li><strong>4G LTE (~2010):</strong> <code>±150 Mbit/s</code></li>
+							<li><strong>5G (?):</strong> <code>±10 Gbit/s</code></li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Le smartphone comme outil du quotidien</h3>
+					</section>
+					<section>
+						<p>Depuis <strong>fin 2010</strong>, on vend plus de smartphone que d'ordinateurs (tout types confondus)</p>
+					</section>
+					<section>
+						<p>±56% des gens possèdent un smartphone</p>
+					</section>
+					<section>
+						<p>±50% des gens utilisent leur smartphone comme <strong>premier moyen</strong> d'accéder à Internet</p>
+					</section>
+					<section>
+						<p>Nous utilisons nos smartphones ±1h par jour.</p>
+					</section>
+					<section>
+						<p>Nous le consultons ±220 fois par jour.</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Mobile <em>vs.</em> Touch</h3>
+					</section>
+					<section>
+						<p>Il n'y a pas que les smartphones qui sont tactiles !</p>
+					</section>
+					<section>
+						<p>Nous connaissons tous les tablettes, voire les <em>phablettes</em>.</p>
+					</section>
+					<section>
+						<p>Nous avons déjà tous manipulé un ordinateur tactile (ex: terminal bancaire).</p>
+					</section>
+					<section>
+						<p>Il existe aussi des <em>laptop hybrides</em>, avec écrans tactiles.</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Les Store</h3>
+					</section>
+					<section>
+						<h4>Quelques chiffres…</h4>
+					</section>
+					<section>
+						<h5>iOS App Store</h5>
+						<p>±1,500,000 apps</p>
+						<p>±100,000,000,000 téléchargements depuis 2008</p>
+					</section>
+					<section>
+						<h5>Android Google Play</h5>
+						<p>±1,600,000 apps</p>
+						<p>±5,000,000,000 téléchargements depuis 2010</p>
+					</section>
+					<section>
+						<h5>Windows Phone Store</h5>
+						<p>±340,000 apps</p>
+					</section>
+					<section>
+						<p>Un passage obligatoire ?</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Développer pour les mobiles/tablettes</h3>
+					</section>
+					<section>
+						<p>3 grandes possibilités :</p>
+					</section>
+					<section>
+						<h3>Applications <em>natives</em></h3>
+						<ul>
+							<li><strong>iPhone:</strong> Objective-C, Swift</li>
+							<li><strong>Android:</strong> Java</li>
+							<li><strong>BlackBerry:</strong> Java</li>
+							<li><strong>Windows Phone:</strong> C#, VB.NET</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Applications <em>hybrides</em></h3>
+						<ul>
+							<li>PhoneGap/Cordova (+ Ionic)</li>
+							<li>Xamarin</li>
+							<li>Appcelerator Titanium</li>
+							<li>Adobe Air</li>
+						</ul>
+						<ul>
+							<li>Rubymotion</li>
+							<li>ReactNative</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Applications <em>web mobile</em></h3>
+					</section>
+					<section>
+						<p>Ok, mais... on choisit quoi ?</p>
+						<p><em>…ça dépend</em>.</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Faire du design pour le <em>touch</em></h3>
+					</section>
+					<section>
+						<p>Connaître les contraintes du média</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Contraintes physiques</h3>
+						<p>1. <em>Tenir</em> le média</p>
+					</section>
+					<section>
+						<figure>
+							<img src="images/holding-phone.png" alt="6 façons de manipuler un smartphone" />
+						</figure>
+					</section>
+					<section>
+						<p>±50% des gens manipulent leur téléphone à une seule main, avec <strong>le pouce</strong> comme pointeur.</p>
+					</section>
+					<section>
+						<p>Toutes positions confondues, ±75% des gens utilisent leur pouce comme pointeur.</p>
+					</section>
+					<section>
+						<figure>
+							<img src="images/holding-tablet.png" alt="3 façons de manipuler une tablet" />
+						</figure>
+					</section>
+					<section>
+						<figure>
+							<img src="images/holding-hybrid.png" alt="1 façon alternative de manipuler un laptop hybride" />
+						</figure>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Contraintes physiques</h3>
+						<p>2. Zones d'accès</p>
+					</section>
+					<section>
+						<figure>
+							<img src="images/thumb-confort-zone.jpg" alt="Zone de confort d'un pouce" />
+						</figure>
+					</section>
+					<section>
+						<figure>
+							<img src="images/mobile-thumb-zones.png" alt="Zone d'accès des pouces sur écrans mobiles" />
+						</figure>
+					</section>
+					<section>
+						<figure>
+							<img src="images/tablet-thumb-zones-vertical.png" alt="Zone d'accès des pouces sur tablettes (portrait)" />
+						</figure>
+					</section>
+					<section>
+						<figure>
+							<img src="images/tablet-thumb-zones-horizontal.png" alt="Zone d'accès des pouces sur tablettes (paysage)" />
+						</figure>
+					</section>
+					<section>
+						<figure>
+							<img src="images/hybrid-thumb-zones.jpg" alt="Zone d'accès des pouces sur laptops hybrides" />
+						</figure>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Contraintes physiques</h3>
+						<p>3. Anatomie du <em>pouce</em></p>
+					</section>
+					<section>
+						<p>Un pouce, c'est <strong>gros</strong>.</p>
+					</section>
+					<section>
+						<p>Un pouce, c'est <strong>court</strong>.</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Contraintes physiques</h3>
+						<p>4. Taille du média</p>
+					</section>
+					<section>
+						<p>Toujours plus petit…</p>
+						<p><em>…ou pas</em>.</p>
+					</section>
+					<section>
+						<p>…toujours plus précis.</p>
+					</section>
+					<section>
+						<p>Mais utilisé par toute la population !</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Organisation visuelle</h3>
+						<p>1. La règle du pouce</p>
+						<figure>
+							<img src="images/vault-boy-thumb.jpg" width="50%" alt="" />
+						</figure>
+					</section>
+					<section>
+						<p>Prenons autant de soin à définir ce que nous mettons à <strong>portée de pouce</strong>…</p>
+						<p>…que le reste.</p>
+					</section>
+				</section>
+
+				<section>
+					<h3>Organisation visuelle</h3>
+					<p>2. Le problème des mains opaques</p>
+				</section>
+
+				<section>
+					<section>
+						<h3>Organisation visuelle</h3>
+						<p>3. La position contenu/contrôles</p>
+					</section>
+					<section>
+						<p>"Content above controls"</p>
+					</section>
+					<section>
+						<p>Attention toutefois aux contraintes propres au système !</p>
+					</section>
+					<section>
+						<figure>
+							<img src="images/twitter-ios.jpg" width="35%" alt="Twitter sur iOS" />
+						</figure>
+					</section>
+					<section>
+						<figure>
+							<img src="images/twitter-android.png" width="35%" alt="Twitter sur Android" />
+						</figure>
+					</section>
+				</section>
 			</div>
 		</div>
 
