Second part of slides, ending work

--- a/slides/index.html
+++ b/slides/index.html
@@ -18,6 +18,12 @@
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css" />
 
+		<style>
+			.with-bcg img {
+				background: white !important;
+			}
+		</style>
+
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
@@ -267,7 +273,69 @@
 				<section>
 					<section>
 						<h3>Contraintes physiques</h3>
-						<p>4. Taille du média</p>
+						<p>4. Intéractions</p>
+					</section>
+					<section>
+						<p>Les <em>gestures</em>, un nouveau monde s'offre à nous !</p>
+					</section>
+					<section>
+						<h4>Tab/Double Tap</h4>
+						<figure class="with-bcg">
+							<img src="images/one_finger_tap_gestureworks.png" height="150" />
+						</figure>
+						<figure class="with-bcg">
+							<img src="images/one_finger_double_tap_gestureworks.png" height="150" />
+						</figure>
+						<p><strong>Attention:</strong> tap ≠ click !</p>
+					</section>
+					<section>
+						<h4>Multiple Tap/Double Tap</h4>
+						<figure class="with-bcg">
+							<img src="images/two_finger_tap_gestureworks.png" height="150" />
+						</figure>
+						<figure class="with-bcg">
+							<img src="images/two_finger_double_tap_gestureworks.png" height="150" />
+						</figure>
+					</section>
+					<section>
+						<h4>Hold/Press</h4>
+						<figure class="with-bcg">
+							<img src="images/one_finger_hold_gestureworks.png" height="150" />
+						</figure>
+					</section>
+					<section>
+						<h4>Swipe/Flick</h4>
+						<figure class="with-bcg">
+							<img src="images/one_finger_swipe_gestureworks.png" height="150" />
+						</figure>
+						<figure class="with-bcg">
+							<img src="images/one_finger_flick_gestureworks.png" height="150" />
+						</figure>
+					</section>
+					<section>
+						<h4>Drag</h4>
+						<figure class="with-bcg">
+							<img src="images/one_finger_drag_gestureworks.png" height="150" />
+						</figure>
+					</section>
+					<section>
+						<h4>Rotate</h4>
+						<figure class="with-bcg">
+							<img src="images/two_finger_rotate_gestureworks.png" height="150" />
+						</figure>
+					</section>
+					<section>
+						<h4>Pinch/Spread</h4>
+						<figure class="with-bcg">
+							<img src="images/two_finger_scale_gestureworks.png" height="150" />
+						</figure>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Contraintes physiques</h3>
+						<p>5. Taille du média</p>
 					</section>
 					<section>
 						<p>Toujours plus petit…</p>
@@ -321,6 +389,61 @@
 							<img src="images/twitter-android.png" width="35%" alt="Twitter sur Android" />
 						</figure>
 					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Contraintes propres aux systèmes</h3>
+						<p>Nous avons des documents pour ça : les <strong>guidelines</strong>.</p>
+					</section>
+					<section>
+						<p>C'est quoi, des <strong>guidelines</strong> ?</p>
+					</section>
+					<section>
+						<ul>
+							<li>
+								<a href="https://developer.apple.com/library/ios/documentation/UserExperience/Conceptual/MobileHIG/">Guidelines iOS</a>
+							</li>
+							<li>
+								<a href="http://developer.android.com/design/index.html">Guidelines Android</a>
+							</li>
+						</ul>
+					</section>
+					<section>
+						<p>Des tables de lois ou des <em>juste</em> indications ?</p>
+					</section>
+					<section>
+						<p>Sortir des guidelines… quand ? Pourquoi ? Pour quoi ?</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Workflow de conception mobile</h3>
+					</section>
+					<section>
+						<p>1. CDC</p>
+					</section>
+					<section>
+						<p>2. Wireframes</p>
+					</section>
+					<section>
+						<p>3. Design</p>
+					</section>
+					<section>
+						<p>4. Prototype d'intéraction (<em>découpe</em>)</p>
+					</section>
+					<section>
+						<p>5. Itérations développement/tests</p>
+					</section>
+					<section>
+						<p>6. Livraison</p>
+					</section>
+				</section>
+
+				<section>
+					<h3>Notre projet web mobile</h3>
+					<p>Que va-t-on faire durant les prochaines semaines ?</p>
 				</section>
 			</div>
 		</div>
