--- a/slides/index.html
+++ b/slides/index.html
@@ -73,15 +73,9 @@
 						<p>Suivi par Android, Blackberry Touch &amp; Windows Mobile.</p>
 					</section>
 					<section>
-						<h3>En parallèle, l'évolution des débits</h3>
-						<ul>
-							<li><strong>GSM/2G (1990):</strong> <code>±9 kbit/s</code></li>
-							<li><strong>EDGE (~2000):</strong> <code>±170 kbit/s</code></li>
-							<li><strong>3G UMTS (~2006):</strong> <code>±1.9 Mbit/s</code></li>
-							<li><strong>3.5G HSPA (~2006):</strong> <code>±14.4 Mbit/s</code></li>
-							<li><strong>4G LTE (~2010):</strong> <code>±150 Mbit/s</code></li>
-							<li><strong>5G (?):</strong> <code>±10 Gbit/s</code></li>
-						</ul>
+						<h3>2009+, la course au "plus"</h3>
+
+						<p><em>Plus</em> petits, <em>plus</em> grands, <em>plus</em> performants, etc.</p>
 					</section>
 				</section>
 
@@ -103,6 +97,32 @@
 					</section>
 					<section>
 						<p>Nous le consultons ±220 fois par jour.</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Débits et performances</h3>
+					</section>
+					<section>
+						<p>±60% des utilisateurs s'attendent à ce qu'un site mobile charge <strong>en moins de 3s</strong>.</p>
+					</section>
+					<section>
+						<p>±71% des utilisateurs s'attendent à ce qu'un site mobile charge <strong>aussi vite que sur desktop</strong>.</p>
+					</section>
+					<section>
+						<p>±22% des utilisateurs <strong>ne feront pas de seconde tentative si un site ne se charge pas sur leur mobile.</strong>.</p>
+					</section>
+					<section>
+						<h3>Évolution des débits</h3>
+						<ul>
+							<li><strong>GSM/2G (1990):</strong> <code>±9 kbit/s</code></li>
+							<li><strong>EDGE (~2000):</strong> <code>±170 kbit/s</code></li>
+							<li><strong>3G UMTS (~2006):</strong> <code>±1.9 Mbit/s</code></li>
+							<li><strong>3.5G HSPA (~2006):</strong> <code>±14.4 Mbit/s</code></li>
+							<li><strong>4G LTE (~2010):</strong> <code>±150 Mbit/s</code></li>
+							<li><strong>5G (?):</strong> <code>±10 Gbit/s</code></li>
+						</ul>
 					</section>
 				</section>
 
