--- a/slides/index.html
+++ b/slides/index.html
@@ -256,22 +256,22 @@
 						</figure>
 					</section>
 					<section>
-						<figure>
+						<figure class="with-bcg">
 							<img src="images/mobile-thumb-zones.png" alt="Zone d'accès des pouces sur écrans mobiles" />
 						</figure>
 					</section>
 					<section>
-						<figure>
+						<figure class="with-bcg">
 							<img src="images/tablet-thumb-zones-vertical.png" alt="Zone d'accès des pouces sur tablettes (portrait)" />
 						</figure>
 					</section>
 					<section>
-						<figure>
+						<figure class="with-bcg">
 							<img src="images/tablet-thumb-zones-horizontal.png" alt="Zone d'accès des pouces sur tablettes (paysage)" />
 						</figure>
 					</section>
 					<section>
-						<figure>
+						<figure class="with-bcg">
 							<img src="images/hybrid-thumb-zones.jpg" alt="Zone d'accès des pouces sur laptops hybrides" />
 						</figure>
 					</section>
@@ -430,7 +430,7 @@
 						</ul>
 					</section>
 					<section>
-						<p>Des tables de lois ou des <em>juste</em> indications ?</p>
+						<p>Des tables de lois ou <em>juste</em> des indications ?</p>
 					</section>
 					<section>
 						<p>Sortir des guidelines… quand ? Pourquoi ? Pour quoi ?</p>
