--- a/slides/index.html
+++ b/slides/index.html
@@ -299,7 +299,7 @@
 						<p>Les <em>gestures</em>, un nouveau monde s'offre à nous !</p>
 					</section>
 					<section>
-						<h4>Tab/Double Tap</h4>
+						<h4>Tap/Double Tap</h4>
 						<figure class="with-bcg">
 							<img src="images/one_finger_tap_gestureworks.png" height="150" />
 						</figure>
